--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,9 +19,12 @@
     "react-draft-wysiwyg": "^1.15.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
+    "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
+    "slate": "^0.82.0",
+    "slate-react": "^0.82.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
