--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
     "bootstrap-icons": "^1.9.1",
     "draftjs-to-html": "^0.9.1",
     "formik": "^2.2.9",
+    "google-adsense": "^0.0.3",
     "html-to-draftjs": "^1.5.0",
     "react": "^18.2.0",
+    "react-adsense": "^0.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.2.0",
     "react-draft-wysiwyg": "^1.15.0",
