--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "redux": "^4.2.0",
     "slate": "^0.82.0",
     "slate-react": "^0.82.0",
+    "utf8": "^3.0.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
